[package]
name = "mem"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
sys-info = "0.9"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
